# Custom_Components_Monitor_App

./: .gitmodules  CMakeLists.txt  README.md
src/: main.cpp
src/cpu_info/cpu_model/: cpu_model.h  cpu_model_name.cpp
src/cpu_info/cpu_params/: cpu_freq_info.cpp  cpu_model_name.cpp  cpu_params.h  cpu_thermal_info.cpp  cpu_utilization.cpp
src/fan_info/: available_fans_tach_info.cpp  fan_params.h
src/gpu_info/: main.cpp
src/gpu_info/gpu_model/: gpu_device.c  gpu_device.cpp  gpu_model.cpp  gpu_model.h
src/gpu_info/gpu_params/: gpu_memory_info.cpp  gpu_other_params.c  gpu_other_params.cpp  gpu_params.h  gpu_thermal_value.c  gpu_thermal_value.cpp  gpu_usage.c  gpu_usage.cpp
src/ram_info/: ram_params.h  ram_usage.c  ram_usage.cpp
